# cerdo

./: .env.sample  .gitignore  Dockerfile  README.md  pyproject.toml
playwright/: CHANGELOG.md  Dockerfile  bun.lockb  index.ts  package-lock.json  package.json  smithery.yaml  tsconfig.json
src/cerdo/agent/: main.py
